--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,10 @@
-# Environment
+# Personal runtime config (not features)
+start.sh
 .env
-.env.local
-.env.production
-
-# Attachments (user/agent generated files)
-attachments/
-
-# Screenshots (local captures)
-screenshots/nul
-screenshots/*.mp4
-
-# OS
-Thumbs.db
-.DS_Store
-
-# Node
+ops-session-model-defaults.json
+tasks.json
+cookies/
 node_modules/
+.DS_Store
+.cursor/
+*.log
